// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionAmount should render 1`] = `
<div>
  <div
    class="sc-hKgILt eclnuD"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2"
    >
      <div
        class="text-sm font-semibold text-theme-neutral-700"
      >
        Amount
      </div>
      <div
        class="font-semibold"
      >
        <div
          class="sc-dlfnbm esnroB"
          color="success"
        >
          <span
            data-testid="Amount"
          >
            + 0.00000001 DARK
          </span>
        </div>
      </div>
    </div>
    <div
      class="sc-bdfBwQ hoQzBh border-theme-success-300 text-theme-success dark:border-theme-success"
    >
      <div
        class="sc-gsTCUz cXMmJt"
        height="1em"
        width="1em"
      >
        <svg>
          received.svg
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionAmount should render currency amount 1`] = `
<div>
  <div
    class="sc-hKgILt eclnuD"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2"
    >
      <div
        class="text-sm font-semibold text-theme-neutral-700"
      >
        Amount
      </div>
      <div
        class="font-semibold"
      >
        <div
          class="sc-dlfnbm esnroB"
          color="success"
        >
          <span
            data-testid="Amount"
          >
            + 0.00000001 DARK
          </span>
        </div>
      </div>
    </div>
    <div
      class="sc-bdfBwQ hoQzBh border-theme-success-300 text-theme-success dark:border-theme-success"
    >
      <div
        class="sc-gsTCUz cXMmJt"
        height="1em"
        width="1em"
      >
        <svg>
          received.svg
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionAmount should render label for multiple recipients 1`] = `
<div>
  <div
    class="sc-hKgILt eclnuD"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2"
    >
      <div
        class="text-sm font-semibold text-theme-neutral-700"
      >
        Amount
      </div>
      <div
        class="font-semibold"
      >
        <div
          class="sc-dlfnbm esnroB"
          color="success"
        >
          <span
            data-testid="Amount"
          >
            + 0.00000001 DARK
          </span>
        </div>
      </div>
    </div>
    <div
      class="sc-bdfBwQ hoQzBh border-theme-success-300 text-theme-success dark:border-theme-success"
    >
      <div
        class="sc-gsTCUz cXMmJt"
        height="1em"
        width="1em"
      >
        <svg>
          received.svg
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionAmount should render label for multiple recipients 2`] = `
<div>
  <div
    class="sc-hKgILt eclnuD"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2"
    >
      <div
        class="text-sm font-semibold text-theme-neutral-700"
      >
        Total Amount
      </div>
      <div
        class="font-semibold"
      >
        <div
          class="sc-dlfnbm esnroB"
          color="success"
        >
          <span
            data-testid="Amount"
          >
            + 0.00000001 DARK
          </span>
        </div>
      </div>
    </div>
    <div
      class="sc-bdfBwQ hoQzBh border-theme-success-300 text-theme-success dark:border-theme-success"
    >
      <div
        class="sc-gsTCUz cXMmJt"
        height="1em"
        width="1em"
      >
        <svg>
          received.svg
        </svg>
      </div>
    </div>
  </div>
</div>
`;
